<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.viewdash</groupId>
        <artifactId>viewDash</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>security</artifactId>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.viewdash</groupId>
            <artifactId>document</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.viewdash</groupId>
            <artifactId>service</artifactId>
            <version>${project.version}</version>
        </dependency>

    </dependencies>

</project>